Add is_system field to ContactGroup and rename 'dynamic' to 'smart'

--- a/templates/contacts/contact_filter.haml
+++ b/templates/contacts/contact_filter.haml
@@ -5,6 +5,6 @@
   {{current_group.name}}
 
 -block subtitle
-  -if current_group.is_dynamic
+  -if current_group.is_smart
     .font-mono.text-sm
       {{ current_group.query }}
