--- a/templates/contacts/contact_filter_spa.haml
+++ b/templates/contacts/contact_filter_spa.haml
@@ -5,6 +5,6 @@
   {{current_group.name}}
 
 -block subtitle
-  -if current_group.is_dynamic
+  -if current_group.is_smart
     .font-mono.text-sm.mb-4.bg-gray-200.text-gray-700.p-3.rounded-lg
       {{ current_group.query }}
