--- a/templates/contacts/contact_list_include.haml
+++ b/templates/contacts/contact_list_include.haml
@@ -41,7 +41,7 @@
 
               %ul.dropdown-menu.label-menu.rounded-lg.border-none.px-4.py-3
                 -for group in groups
-                  -if not group.is_dynamic
+                  -if not group.is_smart
                     %li
                       .lbl-menu(href='#' onclick='addContactToGroup({{group.pk}})' data-id='{{group.pk}}')
                         .flex.items-center.py-1.hover-linked
