--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -43,10 +43,10 @@
         {{ contact.current_flow.name }}
 
     -for group in contact_groups
-      -if group.is_dynamic
+      -if group.is_smart
         -include "includes/recipients_group.haml" with group=group
     -for group in contact_groups
-      -if not group.is_dynamic
+      -if not group.is_smart
         -include "includes/recipients_group.haml" with group=group
 
 -block read-buttons
