--- a/templates/contacts/contact_read.haml
+++ b/templates/contacts/contact_read.haml
@@ -188,9 +188,15 @@
             {% short_datetime ticket.opened_on %}
 
   -if upcoming_events
+    -if upcoming_events|length > 3
+      :css
+        table.upcoming tbody:first-of-type {
+          display: none;
+        }
+
     %table.list.upcoming.mt-6.light
       %thead
-        %th(colspan="2")
+        %th(colspan="3")
           -trans "Upcoming"
       -for evt in upcoming_events
         -if forloop.counter0 == upcoming_events|length|add:-3
@@ -204,35 +210,25 @@
               %span.glyph.icon-flow
             -else
               %span.glyph.icon-clock
-
           %td.details.w-full
-
             .activity-scheduled
               -if evt.event_type == 'M'
                 .activity-body
                   {{evt.message}}
-
               -elif evt.event_type == 'F'
                 -trans "Start"
                 %a.href{ href: "{% url 'flows.flow_editor' evt.flow_uuid %}" }= evt.flow_name
           %td.whitespace-nowrap.text-right
             .pr-6
               {{ evt.scheduled|naturaltime }}
-
               .repeats
                 -if evt.repeat_period == 'D'
                   -trans 'repeats daily'
                 -elif evt.repeat_period == 'W'
                   -trans 'repeats weekly'
-
-      -if upcoming_events|length > 3
-        %tbody.more.hidden
-          -for evt in upcoming_events|slice:":-3"
-            - include "contacts/contact_upcoming_event_include.haml"
-
-      %tbody.first_three
-        -for evt in upcoming_events|slice:"-3:"
-          - include "contacts/contact_upcoming_event_include.haml"
+    -if upcoming_events|length > 3
+      %a.pull-right.show-all.upcoming
+        more
 
 
   %table.list.activity.history.mt-6.light
@@ -515,21 +511,6 @@
             margin-right: 3px;
           }
         }
-
-        table.upcoming {
-          .upcoming-event-display-selector{
-            .show-all, .hide-all {
-              display: inline-block;
-              color: rgb(var(--primary-rgb));
-              margin: 0;
-            }
-            .is-active{
-              color: #999999;
-              cursor: text;
-              text-decoration: none;
-            }
-          }
-        }
     {% endlessblock %}
 
 -block extra-script
@@ -563,15 +544,8 @@
       });
 
       $('.show-all.upcoming').live('click', function() {
-        $(this).addClass("is-active");
-        $('.hide-all.upcoming').removeClass("is-active");
-        $('table.list.upcoming .more').removeClass("hidden");
-      });
-
-      $('.hide-all.upcoming').live('click', function() {
-        $(this).addClass("is-active");
-        $('.show-all.upcoming').removeClass("is-active");
-        $('table.list.upcoming .more').addClass("hidden");
+        $(this).hide();
+        $('table.list.upcoming tbody:first-of-type').show();
       });
 
       $('.show-all.fields').live('click', function() {
