--- a/templates/channels/types/instagram/claim.haml
+++ b/templates/channels/types/instagram/claim.haml
@@ -5,6 +5,10 @@
   -blocktrans trimmed with name=brand.name
     You can connect your Instagram business account to {{name}} in just a few simple steps.
 
+  -if claim_error
+    .alert-error.my-4
+      {{ claim_error }}
+
 -block form
   .mt-4.card
     #fb-guide
