Remove unnecessary else block

--- a/templates/channels/types/facebookapp/claim.haml
+++ b/templates/channels/types/facebookapp/claim.haml
@@ -82,11 +82,8 @@
         return res;
       }, {});
 
-      var accessToken = result.long_lived_token;
+      var accessToken = result.long_lived_token || result.access_token;
       if (accessToken) {
-        getFBPages(accessToken);
-      } else {
-        accessToken = result.access_token;
         getFBPages(accessToken);
       }
 
