--- a/templates/channels/types/instagram/claim.haml
+++ b/templates/channels/types/instagram/claim.haml
@@ -86,11 +86,8 @@
         return res;
       }, {});
 
-      var accessToken = result.long_lived_token;
+      var accessToken = result.long_lived_token || result.access_token;
       if (accessToken) {
-        getFBPages(accessToken);
-      } else {
-        accessToken = result.access_token;
         getFBPages(accessToken);
       }
 
