--- a/static/less/legacy.less
+++ b/static/less/legacy.less
@@ -2182,6 +2182,7 @@ span.label a {
   position: absolute;
   right: -50px;
   width: 30px;
+  display: none;
 }
 
 .imsg.from:before {
@@ -2190,6 +2191,7 @@ span.label a {
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
   transform: rotateY(180deg);
+  display: none;
 }
 
 // completion custom styles
