--- a/templates/flows/flow_list_spa.haml
+++ b/templates/flows/flow_list_spa.haml
@@ -7,6 +7,7 @@
 -block page-top
 
 -block content
+  .page-title
 
   -if org_perms.flows.flow_update
     %temba-modax#export-results{ header:'{% trans "Download Results" %}' }
@@ -19,9 +20,16 @@
         -if request.REQUEST.status
           %input(type='hidden' name='status' value='{{request.REQUEST.status}}')
 
+    .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
+      -include "includes/short_pagination.haml"
+      -if paginator.is_es_search and not page_obj.has_next_page and page_obj.number == paginator.num_pages and paginator.count > 10000
+        .text-gray-400.text-sm.self-end.mt-2
+          -trans "To view more than 10,000 search results, save it as a group."
+      
+          
     -block flow-list
-      .shadow.rounded-lg.overflow-y-auto
-        %table.list.lined.selectable
+      .flex-grow.overflow-y-auto.shadow
+        %table.relative.list.object-list.lined.selectable.scrolled
           -if object_list
             %thead
               %tr
@@ -34,10 +42,10 @@
 
           %tbody
             -for object in object_list
-              %tr.object-row.select-row{ data-uuid: "{{object.uuid}}", data-id: "{{ object.id }}",  onclick:'handleRowClicked(event)', href:"{% url 'flows.flow_editor' object.uuid%}"}
+              %tr.object-row.select-row(onclick='handleRowClicked(event)' data-uuid="{{object.uuid}}" data-object-id="{{object.id}}")
 
                 -if org_perms.flows.flow_update
-                  %td.checkbox.object-row-checkbox
+                  %td.checkbox.object-row-checkbox(onclick="checkInner(event);")
                     %temba-checkbox{onclick:"handleRowSelection(this)"}
 
                 %td.w-full
@@ -53,7 +61,7 @@
                 %td
                   .whitespace-no-break.flex.items-center.ml-2.justify-end
                     -for label in object.labels.all
-                      .lbl.linked.ml-2{ onclick:"goto(event)", data-id: '{{label.uuid}}', href:"{% url 'flows.flow_filter' label.uuid%}"}
+                      .lbl.linked.ml-2{ onclick:"goto(event)", data-id: '{{label.id}}', data-uuid: '{{label.uuid}}', href:"{% url 'flows.flow_filter' label.uuid%}"}
                         {{label.name}}
 
                 %td
@@ -74,10 +82,6 @@
               %tr.empty_list
                 %td(colspan='99')
                   -trans "No matching flows."
-
-      -block paginator
-        .mr-24
-          -include "includes/pagination.haml"
 
     -else
       -include "flows/empty_include.html"
@@ -104,13 +108,17 @@
       }
 
       function handleCreateLabelModalLoaded(event) {
-        lastChecked = getCheckedIds();
+        window.lastChecked = getCheckedIds();
         var body = event.detail.body;
         body.querySelector("#id_flows").value = lastChecked.join();
       }
 
       function handleCreateLabelModalSubmitted(event) {
         refresh(function() { recheckIds(); }, true);
+        var menu = document.querySelector("temba-menu");
+        if (menu) {
+          window.setTimeout(function(){ menu.refresh()}, 2000);
+        }
       }
 
       function exportFlows(){
