--- a/templates/triggers/trigger_list_spa.haml
+++ b/templates/triggers/trigger_list_spa.haml
@@ -8,94 +8,78 @@
 
   .page-title
 
-  .flex.w-full.items-end
-    -block action-buttons
-      -if org_perms.triggers.trigger_update
-        .action-buttons.list-buttons-container.h-full.mr-2.flex-grow
-          .list-buttons.flex.items-center.-mx-2.h-full
-            -if 'restore' in actions
-              .button-action.object-btn-restore
-                .-mt-1.mr-2.glyph.icon-checkmark
-                -trans "Activate"
-
-            -if 'archive' in actions
-              .button-action.object-btn-archive
-                .-mt-1.mr-2.glyph.icon-box
-                -trans "Archive"
-
-
   %form#search-form.mb-4(method="get")
     %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="search" value="{{search}}")
     -if request.REQUEST.status
       %input(type='hidden' name='status' value='{{request.REQUEST.status}}')
     %input.hide(type="submit")
 
-  -block trigger-list
-    .overflow-y-auto.flex-grow.shadow.bg-white.rounded-t-lg
-      %table.list.scrolled.lined.selectable{class: '{% if org_perms.flows.flow_update %}selectable{% endif %}'}
-        %tbody
-          -for obj in object_list
-            %tr.trigger.object-row(data-object-id="{{ obj.id }}" onclick="updateTrigger(event, {{obj.id}})")
-              - if org_perms.triggers.trigger_update
-                %td.trigger.checkbox.object-row-checkbox
-                  %temba-checkbox{onclick:"handleRowSelection(this)"}
-              %td.w-full
-                -if obj.trigger_type == 'K'
-                  -trans "The keyword"
+  .mt-4.shadow.rounded-lg.rounded-bl-none.rounded-br-none.bg-white
+    -include "includes/short_pagination.haml"
+    -if paginator.is_es_search and not page_obj.has_next_page and page_obj.number == paginator.num_pages and paginator.count > 10000
+      .text-gray-400.text-sm.self-end.mt-2
+        -trans "To view more than 10,000 search results, save it as a group."
+
+  .flex-grow.overflow-y-auto.shadow
+    %table.list.scrolled.lined.selectable{class: '{% if org_perms.flows.flow_update %}selectable{% endif %}'}
+      %tbody
+        -for obj in object_list
+          %tr.trigger.object-row(data-object-id="{{ obj.id }}" onclick="updateTrigger(event, {{obj.id}})")
+            - if org_perms.triggers.trigger_update
+              %td.trigger.checkbox.object-row-checkbox
+                %temba-checkbox{onclick:"handleRowSelection(this)"}
+            %td.w-full
+              -if obj.trigger_type == 'K'
+                -trans "The keyword"
+                %b
+                  {{obj.keyword}}
+              -elif obj.trigger_type == 'M'
+                -trans "A missed call"
+              -elif obj.trigger_type == 'C'
+                -trans "An uncaught message"
+              -elif obj.trigger_type == 'V'
+                -trans "An inbound call"
+              -elif obj.trigger_type == 'N'
+                -trans "A new conversation"
+                -if obj.channel
+                  -trans "on"
                   %b
-                    {{obj.keyword}}
-                -elif obj.trigger_type == 'M'
-                  -trans "A missed call"
-                -elif obj.trigger_type == 'C'
-                  -trans "An uncaught message"
-                -elif obj.trigger_type == 'V'
-                  -trans "An inbound call"
-                -elif obj.trigger_type == 'N'
-                  -trans "A new conversation"
-                  -if obj.channel
-                    -trans "on"
-                    %b
-                      %a{href:'{%url "channels.channel_read" obj.channel.uuid %}'}= obj.channel
+                    %a{href:'{%url "channels.channel_read" obj.channel.uuid %}'}= obj.channel
 
-                -elif obj.trigger_type == 'R'
-                  -trans "The referrer id"
-                  %b
-                    {{obj.referrer_id}}
-                  -if obj.channel
-                    -trans "on the channel"
-                    .linked.inline{onclick:"goto(event)", href:'{%url "channels.channel_read" obj.channel.uuid %}'}
-                      {{obj.channel}}
+              -elif obj.trigger_type == 'R'
+                -trans "The referrer id"
+                %b
+                  {{obj.referrer_id}}
+                -if obj.channel
+                  -trans "on the channel"
+                  .linked.inline{onclick:"goto(event)", href:'{%url "channels.channel_read" obj.channel.uuid %}'}
+                    {{obj.channel}}
 
-                -elif obj.trigger_type == 'T'
-                  -trans "A closed ticket"
+              -elif obj.trigger_type == 'T'
+                -trans "A closed ticket"
 
-                -if obj.schedule
-                  -trans "Start"
+              -if obj.schedule
+                -trans "Start"
+              -else
+                -trans "starts"
+              .linked.inline(onclick="goto(event)" href='{%url "flows.flow_editor" obj.flow.uuid %}')<
+                {{obj.flow}}
+
+              -if obj.schedule
+                -if obj.schedule.next_fire and not obj.is_archived
+                  {{ obj.schedule.get_display }}
                 -else
-                  -trans "starts"
-                .linked.inline(onclick="goto(event)" href='{%url "flows.flow_editor" obj.flow.uuid %}')<
-                  {{obj.flow}}
+                  -trans "is not scheduled"
 
-                -if obj.schedule
-                  -if obj.schedule.next_fire and not obj.is_archived
-                    {{ obj.schedule.get_display }}
-                  -else
-                    -trans "is not scheduled"
+            %td(onclick="handleRowSelection(this)" width="250px")
+              -include "includes/recipients.haml" with groups=obj.groups.all contacts=obj.contacts.all
 
-              %td(onclick="handleRowSelection(this)" width="250px")
-                -include "includes/recipients.haml" with groups=obj.groups.all contacts=obj.contacts.all
+          -empty
+            %tr.empty_list
+              %td{colspan:3}
+                -trans "No matching triggers."
 
-            -empty
-              %tr.empty_list
-                %td{colspan:3}
-                  -trans "No matching triggers."
-
-        -block extra-rows
-
-    -block paginator
-      .shadow.rounded-b-lg.z-10.bg-gray-300
-        .mr-24.p-4
-          -include "includes/pagination.haml"
+      -block extra-rows
 
   %temba-modax#update-trigger
 -block extra-script
