--- a/templates/contacts/contact_list_spa.haml
+++ b/templates/contacts/contact_list_spa.haml
@@ -14,14 +14,6 @@
     th, td {
       padding: 0.25rem;
     }
-    table.relative.list.object-list.lined.selectable tr {
-    }
-    
-    table.relative.list.object-list.lined.selectable th {
-      position: sticky;
-      top: 0;
-    }
-
 
 -block content
   .page-title
@@ -46,120 +38,120 @@
       .text-gray-400.text-sm.self-end.mt-2
         -trans "To view more than 10,000 search results, save it as a group."
 
-  .flex-grow.overflow-y-auto.shadow
-      %table.relative.list.object-list.lined.selectable.scrolled
-        %tbody
-          - if object_list
-            %tr.contacts
-              -if org_perms.contacts.contact_update
-                %th.z-10
-              %th
-              %th
-              -for field in contact_fields
-                -if field.show_in_table
-                  %th
-                    -if sort_field == field.key
-                      -if sort_direction == 'desc'
-                        %a(href="{{request.path}}?sort_on={{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
-                          %div
-                            {{ field.label }}
-                            %span.sort.icon.icon-arrow-down-2.sort-asc.visible
-                      -else
-                        %a(href="{{request.path}}?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
-                          %div
-                            {{ field.label }}
-                            %span.sort.icon.icon-arrow-up51.sort-desc.visible
+  .flex-grow.shadow.overflow-y-auto
+    %table.relative.list.object-list.lined.selectable.scrolled.sticky
+      %tbody
+        - if object_list
+          %tr.contacts
+            -if org_perms.contacts.contact_update
+              %th.z-10
+            %th
+            %th
+            -for field in contact_fields
+              -if field.show_in_table
+                %th
+                  -if sort_field == field.key
+                    -if sort_direction == 'desc'
+                      %a(href="{{request.path}}?sort_on={{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
+                        %div
+                          {{ field.label }}
+                          %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                     -else
                       %a(href="{{request.path}}?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
                         %div
                           {{ field.label }}
-                          %span.sort.icon.icon-arrow-down-2.sort-desc
-              %th.px-6.py-3.pt-4.border-b.border-gray-200.bg-gray-100.text-left.font-medium.uppercase.text-xs.tracking-wider
-                - if object_list
-                  -if sort_field == 'last_seen_on'
-                    -if sort_direction == 'desc'
-                      %a(href="{{request.path}}?sort_on=last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
-                        %div
-                          -trans "Last Seen On"
-                          %span.sort.icon.icon-arrow-down-2.sort-asc.visible
-                    -else
-                      %a(href="{{request.path}}?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
-                        %div
-                          -trans "Last Seen On"
                           %span.sort.icon.icon-arrow-up51.sort-desc.visible
+                  -else
+                    %a(href="{{request.path}}?sort_on=-{{ field.key }}{% if search %}&search={{ search|escape }}{% endif %}")
+                      %div
+                        {{ field.label }}
+                        %span.sort.icon.icon-arrow-down-2.sort-desc
+            %th.px-6.py-3.pt-4.border-b.border-gray-200.bg-gray-100.text-left.font-medium.uppercase.text-xs.tracking-wider
+              - if object_list
+                -if sort_field == 'last_seen_on'
+                  -if sort_direction == 'desc'
+                    %a(href="{{request.path}}?sort_on=last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
+                      %div
+                        -trans "Last Seen On"
+                        %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                   -else
                     %a(href="{{request.path}}?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
                       %div
                         -trans "Last Seen On"
-                        %span.sort.icon.icon-arrow-down-2.sort-desc
+                        %span.sort.icon.icon-arrow-up51.sort-desc.visible
+                -else
+                  %a(href="{{request.path}}?sort_on=-last_seen_on{% if search %}&search={{ search|escape }}{% endif %}")
+                    %div
+                      -trans "Last Seen On"
+                      %span.sort.icon.icon-arrow-down-2.sort-desc
 
-              %th.px-6.py-3.pt-4.border-b.border-gray-200.bg-gray-100.text-left.font-medium.uppercase.text-xs.tracking-wider
-                -if object_list
-                  -if sort_field == 'created_on'
-                    -if sort_direction == 'desc'
-                      %a(href="{{request.path}}?sort_on=created_on{% if search %}&search={{ search|escape }}{% endif %}")
-                        %div
-                          -trans "Created On"
-                          %span.sort.icon.icon-arrow-down-2.sort-asc.visible
-                    -else
-                      %a(href="{{request.path}}?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
-                        %div
-                          -trans "Created On"
-                          %span.sort.icon.icon-arrow-up51.sort-desc.visible
+            %th.px-6.py-3.pt-4.border-b.border-gray-200.bg-gray-100.text-left.font-medium.uppercase.text-xs.tracking-wider
+              -if object_list
+                -if sort_field == 'created_on'
+                  -if sort_direction == 'desc'
+                    %a(href="{{request.path}}?sort_on=created_on{% if search %}&search={{ search|escape }}{% endif %}")
+                      %div
+                        -trans "Created On"
+                        %span.sort.icon.icon-arrow-down-2.sort-asc.visible
                   -else
                     %a(href="{{request.path}}?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
                       %div
                         -trans "Created On"
-                        %span.sort.icon.icon-arrow-down-2.sort-desc
-            -for object in contacts
-              %tr.contact.select-row.object-row(onclick='handleRowClicked(event)' data-uuid="{{object.uuid}}" data-object-id="{{object.id}}")
+                        %span.sort.icon.icon-arrow-up51.sort-desc.visible
+                -else
+                  %a(href="{{request.path}}?sort_on=-created_on{% if search %}&search={{ search|escape }}{% endif %}")
+                    %div
+                      -trans "Created On"
+                      %span.sort.icon.icon-arrow-down-2.sort-desc
+          -for object in contacts
+            %tr.contact.select-row.object-row(onclick='handleRowClicked(event)' data-uuid="{{object.uuid}}" data-object-id="{{object.id}}")
 
-                -if org_perms.contacts.contact_update or org_perms.msgs.broadcast_send
-                  %td.contact.checkbox.object-row-checkbox(onclick="checkInner(event);")
-                    %temba-checkbox(onclick="handleRowSelection(this)")
+              -if org_perms.contacts.contact_update or org_perms.msgs.broadcast_send
+                %td.contact.checkbox.object-row-checkbox(onclick="checkInner(event);")
+                  %temba-checkbox(onclick="handleRowSelection(this)")
 
-                %td
-                  .whitespace-nowrap
-                    {{ object|name:user_org }}
+              %td
+                .whitespace-nowrap
+                  {{ object|name:user_org }}
 
-                %td.w-full
-                  .whitespace-nowrap
-                    {{ object|urn:user_org }}
+              %td.w-full
+                .whitespace-nowrap
+                  {{ object|urn:user_org }}
 
-                -for field in contact_fields
-                  -if field.show_in_table
-                    %td.field.truncate(style="max-width:240px")
-                      {{ object|contact_field:field.key }}
+              -for field in contact_fields
+                -if field.show_in_table
+                  %td.field.truncate(style="max-width:240px")
+                    {{ object|contact_field:field.key }}
 
-                %td.value-received.field_received
-                  .whitespace-nowrap
-                    -if object.last_seen_on
-                      {% format_datetime object.last_seen_on %}
-                    -else
-                      {{ "--" }}
-                %td.value-received.field_received
-                  .whitespace-nowrap
-                    {% format_datetime object.created_on %}
+              %td.value-received.field_received
+                .whitespace-nowrap
+                  -if object.last_seen_on
+                    {% format_datetime object.last_seen_on %}
+                  -else
+                    {{ "--" }}
+              %td.value-received.field_received
+                .whitespace-nowrap
+                  {% format_datetime object.created_on %}
 
-                // This is needed for action buttons
-                %td.hide
-                  .value-labels
-                    %nobr
-                      -for group in object.all_groups.all
-                        -if group.group_type == 'U'
-                          %span.label.label-info.lbl(data-id="{{group.id}}")
-                            %a(href="{% url 'contacts.contact_filter' group.uuid %}")
-                              {{group.name}}
+              // This is needed for action buttons
+              %td.hide
+                .value-labels
+                  %nobr
+                    -for group in object.all_groups.all
+                      -if group.group_type == 'U'
+                        %span.label.label-info.lbl(data-id="{{group.id}}")
+                          %a(href="{% url 'contacts.contact_filter' group.uuid %}")
+                            {{group.name}}
 
-            -empty
-              %tr.empty_list
-                %td(colspan="99")
-                  -trans "No matching contacts."
+          -empty
+            %tr.empty_list
+              %td(colspan="99")
+                -trans "No matching contacts."
 
-                -for field in contact_fields
-                  -if field.show_in_table
-                    %td.field
-                %td
+              -for field in contact_fields
+                -if field.show_in_table
+                  %td.field
+              %td
             
 
 
