--- a/templates/campaigns/campaign_read_spa.haml
+++ b/templates/campaigns/campaign_read_spa.haml
@@ -44,7 +44,7 @@
 
           %td.whitespace-nowrap
             %span.linked(onclick="goto(event)" href="{% url 'campaigns.campaignevent_read' event.campaign.uuid event.pk %}")
-              {{ event.offset_display }} {{ event.relative_to.label }}
+              {{ event.offset_display }} {{ event.relative_to.name }}
 
           %td.w-full
             -if event.event_type == 'M'
