--- a/templates/campaigns/campaignevent_read.haml
+++ b/templates/campaigns/campaignevent_read.haml
@@ -2,7 +2,7 @@
 -load smartmin sms temba compress humanize contacts i18n
 
 -block page-title
-  {{ object.offset_display }} {{ object.relative_to.label }}
+  {{ object.offset_display }} {{ object.relative_to.name }}
 
 -block title-icon
   .title-icon
@@ -15,7 +15,7 @@
       -trans "(Archived)"
 
 -block subtitle
-  {{ object.offset_display }} {{ object.relative_to.label }}
+  {{ object.offset_display }} {{ object.relative_to.name }}
 
   .mt-2
     -if object.campaign.group.is_active
