--- a/templates/tickets/ticket_list.haml
+++ b/templates/tickets/ticket_list.haml
@@ -265,7 +265,7 @@
 -block page-container
   -block content
     .flex.flex-col(style="height:100%")
-      .page.flex-grow  
+      .page.flex-grow.flex.flex-col.min-h-0
         .flex.widget-container(style="{% if is_spa%}margin:0;padding:0;height:100%{%else%}height:100vh; margin-top:-121px;padding-top:121px;margin-bottom:-100px;padding-bottom:100px;{%endif%}")
           -if not is_spa
             .folders
@@ -285,7 +285,7 @@
               -else
                 %temba-ticket-list(nextselection="{{nextUUID}}" agent="{{request.user.email}}" endpoint="{% url 'tickets.ticket_folder' folder status %}" -temba-refreshed="handleTicketsRefreshed" onchange="handleContactChanged(event)")
 
-          .flex-grow.flex-col.h-full(style="" class="{% if is_spa %}ml-4{%else%}py-4 pb-4 pr-4{% endif %}")
+          .flex-grow.flex-col.flex.min-h-0(class="{% if is_spa %}ml-4{%else%}py-4 pb-4 pr-4{% endif %}")
             .empty
               -if has_tickets
                 %h2
@@ -311,6 +311,5 @@
                   -blocktrans trimmed
                     Sometimes an automated chatbot isn't enough. When your contacts need to chat with a real person, you can use the
                     Open Ticket action to open a new ticket.
-                      
-                      
-            %temba-contact-chat(agent="{{request.user.email}}" -temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated" monitor="true")
+
+            %temba-contact-chat.shadow(agent="{{request.user.email}}" -temba-refreshed="handleContactHistoryUpdated" -temba-content-changed="handleTicketUpdated" monitor="true" toolbar="true")
