--- a/templates/contacts/contact_read_spa.haml
+++ b/templates/contacts/contact_read_spa.haml
@@ -15,5 +15,6 @@
 -block subtitle
 
 -block content
-  .flex.flex-col(style="height:100%")
-    %temba-contact-chat(contact="{{object.uuid}}" monitor="true")
+  %temba-tabs.flex-grow
+    %temba-tab(icon="message-square" name="Chat")
+      %temba-contact-chat(contact="{{object.uuid}}" monitor="true")
