Fix modals on spa pages

--- a/templates/flows/flow_broadcast.haml
+++ b/templates/flows/flow_broadcast.haml
@@ -195,7 +195,7 @@
       return operands.join(" OR ");
     }
 
-    var modax = document.querySelector("#start-flow");
+    var modax = document.querySelector("#start-flow, #shared-modax");
     var modalBody = modax.shadowRoot;
     var queryField = modalBody.querySelector('.query');
     var queryWidget = queryField.querySelector("temba-contact-search");
