--- a/templates/contacts/contact_update.haml
+++ b/templates/contacts/contact_update.haml
@@ -44,11 +44,9 @@
     });
 
     function createMoveLinks() {
-      var body = document.querySelector("#edit-contact, #gear-modax").shadowRoot.querySelector(".modax-body");
-
+      var body = document.querySelector("#edit-contact, #gear-modax, #shared-modax").shadowRoot.querySelector(".modax-body");
       $(body).find('.order-helper').remove();
 
-      // :not(:first)
       var idx = 0;
       var first = true;
       $(body).find(".control-group temba-textinput[id^=id_urn__]").each(function() {
@@ -65,22 +63,18 @@
           $(this).parents('.control-group').prepend(link);
         }
 
-
         idx++;
         first = false;
-
-
       });
     }
 
     function moveUp(link) {
-      var body = document.querySelector("#edit-contact, #gear-modax").shadowRoot.querySelector(".modax-body");
+      var body = document.querySelector("#edit-contact, #gear-modax, #shared-modax").shadowRoot.querySelector(".modax-body");
       var group = $(body).find('#' + link).parents('.control-group');
       var previous = group.prev();
       previous.before(group);
       createMoveLinks();
     }
-
 
 
 -block fields
