--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -25,7 +25,7 @@
 
     html {
       --color-text-dark: #555;
-      --temba-textinput-font-size: 1.125rem;
+      --temba-textinput-font-size: 1;
       --temba-textinput-padding: 0.6em .8em;
       --widget-box-shadow: rgba(0, 0, 0, 0.05) 0px 3px 7px 0px, rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
       --widget-box-shadow-focused: 0 0 0 3px rgba(164, 202, 254, .45), rgba(0, 0, 0, 0.05) 0px 3px 7px 0px, rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
@@ -486,7 +486,9 @@
 
       var a = target.closest("a");
       if (!a) {
-        a = evt.path.find(function(ele){ return  ele.tagName == "A" });
+        if (evt.path) {
+          a = evt.path.find(function(ele){ return  ele.tagName == "A" });
+        }
       }
 
       if (a && a.href) {
