Update the approach to the test a token is valid for FBA and IG channels

--- a/templates/channels/types/facebookapp/refresh_token.haml
+++ b/templates/channels/types/facebookapp/refresh_token.haml
@@ -51,7 +51,7 @@
           }
 
         },
-        {scope: 'pages_messaging,pages_show_list,pages_manage_metadata'});
+        {scope: 'pages_messaging,pages_show_list,pages_manage_metadata,pages_read_engagement'});
 
       })
     });
