--- a/templates/channels/types/instagram/refresh_token.haml
+++ b/templates/channels/types/instagram/refresh_token.haml
@@ -52,7 +52,7 @@
           }
 
         },
-        {scope: 'instagram_manage_messages,pages_show_list,pages_manage_metadata,instagram_basic'});
+        {scope: 'instagram_basic,instagram_manage_messages,pages_manage_metadata,pages_messaging,pages_read_engagement,pages_show_list'});
 
       })
     });
